Comecei anotação art. 32.º

--- a/anotacao.org
+++ b/anotacao.org
@@ -30,7 +30,7 @@ Artigo 29.º \\
 
 ** Bibliografia :ignore:
 
-[cite/nocite:@hofmann2023;@muller-terpitz2023;@wilman2024]
+[cite/nocite:@hofmann2023;@muller-terpitz2023;@wilman2024;@leitao2023]
 
 *Bibliografia:*
 
@@ -60,8 +60,7 @@ A isenção subjetiva a favor das micro e pequenas empresas visa evitar encargos
 
 Estes conceitos efetuam o recorte subjetivo de quem está sujeito às disposições adicionais consagradas na secção IV do capítulo III e de quem beneficia da exclusão prevista no artigo 29.º. Assim, e por exemplo, o fornecedor de plataforma em linha que /ou/ não permita a celebração de contratos à distância /ou/ só permita a celebração de contratos à distância entre comerciantes não está obrigado a cumprir as disposições adicionais consagradas na secção IV do capítulo III. Por outro lado, o fornecedor de plataforma em linha que permita a celebração de contratos à distância com consumidores /e/ que seja considerado uma micro ou pequena empresa na aceção da Recomendação 2003/361/CE beneficia da exclusão consagrada no artigo 29.º, n.º 1, /exceto se/ a sua plataforma em linha for designada como uma plataforma de muito grande dimensão (artigo 29.º, n.º 2).
 
-*2. Conceitos de micro e pequena empresa.* O conceito de empresa abrange "qualquer entidade que, independentemente da sua forma jurídica, exerce uma actividade econó-
-mica."[fn:10] Uma micro empresa "é definida como uma empresa que emprega menos de 10 pessoas e cujo volume de negócios anual ou balanço total anual não excede 2 milhões de euros."[fn:8] Uma pequena empresa "é definida como uma empresa que emprega menos de 50 pessoas e cujo volume de negócios anual ou balanço total anual não excede 10 milhões de euros."[fn:9] Atende-se também às relações entre empresas para efeitos de apuramento destes critérios, classificando as empresas como autónomas, parceiras ou associadas[fn:11] e esclarecendo que uma empresa não pode ser considerada uma pequena ou média empresa "se 25% ou mais do seu capital ou dos seus direitos de voto forem controlados, directa ou indirectamente, por uma ou várias colectividades públicas ou organismos públicos, a título individual ou conjuntamente."[fn:12] A Recomendação estabelece ainda os dados a considerar para cálculo dos efetivos e dos montantes financeiros[fn:13].
+*2. Conceitos de micro e pequena empresa.* O conceito de empresa abrange "qualquer entidade que, independentemente da sua forma jurídica, exerce uma actividade económica."[fn:10] Uma micro empresa "é definida como uma empresa que emprega menos de 10 pessoas e cujo volume de negócios anual ou balanço total anual não excede 2 milhões de euros."[fn:8] Uma pequena empresa "é definida como uma empresa que emprega menos de 50 pessoas e cujo volume de negócios anual ou balanço total anual não excede 10 milhões de euros."[fn:9] Atende-se também às relações entre empresas para efeitos de apuramento destes critérios, classificando as empresas como autónomas, parceiras ou associadas[fn:11] e esclarecendo que uma empresa não pode ser considerada uma pequena ou média empresa "se 25% ou mais do seu capital ou dos seus direitos de voto forem controlados, directa ou indirectamente, por uma ou várias colectividades públicas ou organismos públicos, a título individual ou conjuntamente."[fn:12] A Recomendação estabelece ainda os dados a considerar para cálculo dos efetivos e dos montantes financeiros[fn:13].
 
 De acordo com o TJUE, o conceito de micro, pequenas e médias empresas (PME) da Recomendação 2003/361/CE deve ser objeto de interpretação estrita, pois as vantagens concedidas às PME constituem, muitas vezes, exceções às regras gerais[fn:14][cite:@hofmann2023 29.º, n.º 7, defendem que a interpretação não deve ser estrita, mas sim tendo em conta a sua função específica].
 
@@ -71,7 +70,7 @@ Sendo a exclusão um benefício concedido aos os fornecedores de plataformas em 
 
 *4. Perda de estatuto de micro ou pequena empresa*. Caso o fornecedor deixe de preencher os critérios para ser considerado, pelo menos, uma pequena empresa na aceção da Recomendação 2003/361/CE, ele beneficia de um período de 12 meses contados a partir da data em que perdeu o estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo). Uma empresa perde o estatuto de micro ou pequena empresa se, numa base anual, superar o limiar de efetivos e ou os limiares financeiros /e/ se tal se repetir durante dois exercícios consecutivos[fn:15]. Perdido o estatuto de micro ou pequena empresa, o fornecedor só terá a obrigação de cumprir com as normas da presente secção passados 12 meses. Este período de transição compreende-se como força de mitigar os encargos inerentes ao cumprimento das obrigações desta secção.
 
-*5. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD). Embora improvável, é possível que uma micro ou pequena empresa seja a fornecedora de uma plataforma de muito grande dimensão, pois os critérios de determinação das micro e pequenas empresas são distintos dos da determinação das plataformas em linha de muito grande dimensão[cite:@wilman2024 29.º, n.º 5]. Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
+*5. Fornecedores de plataformas em linha de muito grande dimensão*. Os fornecedores de plataformas em linha que permitam a celebração de contratos à distância que tenham sido designadas como plataformas em linha de muito grande dimensão (cf. artigo 33.º e ss.) não beneficiam da exclusão (artigo 29.º, n.º 2, do RSD) nem do período de transição em caso de perda do estatuto de micro ou pequena empresa (artigo 29.º, n.º 1, 2.º parágrafo, /in fine/, do RSD)[cite:@leitao2023 p. 76]. Embora improvável, é possível que uma micro ou pequena empresa seja a fornecedora de uma plataforma de muito grande dimensão, pois os critérios de determinação das micro e pequenas empresas são distintos dos da determinação das plataformas em linha de muito grande dimensão[cite:@wilman2024 29.º, n.º 5]. Considerando o maior alcance e impacto das plataformas em linha de muito grande dimensão (que têm um número médio mensal de destinatários activos do serviços na União Europeia igual ou superior a 45 milhões), o legislador considerou que o valor da proteção dos consumidores deve prevalecer sobre o apoio às micro e pequenas empresas, razão pela qual mesmo que o fornecedor da plataforma em linha de muito grande dimensão seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, ele encontra-se obrigado ao cumprimento das disposições da presente secção.
 
 Caso o fornecedor seja uma micro ou pequena empresa, na aceção da Recomendação 2003/361/CE, e a sua plataforma em linha que permite a celebração de contratos à distância seja designada pela Comissão Europeia como uma plataforma em linha de muito grande dimensão pode questionar-se a partir de que data devem ser cumpridas as disposições previstas nos artigos 30.º a 32.º do RSD. Resulta do artigo 33.º, n.º 6, 2.º parágrafo, do RSD que as obrigações adicionais dos fornecedores de plataformas em linha de muito grande dimensão e de motores de pesquisa em linha de muito grande dimensão no que se refere à gestão de riscos sistémicos (secção 5 do capítulo III) são aplicáveis no prazo de quatro meses após a notificação da designação ao fornecedor. Nada se prevê, porém, quanto à data em que são aplicáveis as disposições adicionais aplicáveis aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes (secção 4 do capítulo III). Parecem possíveis duas interpretações: a primeira, mais literal, é a de que as disposições da presente secção são aplicáveis a partir da data da notificação ao fornecedor da designação da sua plataforma como uma plataforma em linha de muito grande dimensão; a segunda é a de que as disposições da presente secção são aplicáveis 4 meses após a notificação ao fornecedor da designação da plataforma como plataforma em linha de muito grande dimensão, aplicando analogicamente o prazo previsto no artigo 33.º, n.º 6, 2.º parágrafo do RSD. Esta segunda opção é mais consentânea com a ponderação de interesses acima referida. Considerando o teor das obrigações previstas nos artigos 30.º a 32.º do RSD, a caracterização do fornecedor como micro ou pequena empresa na aceção da Recomendação 2003/361/CE e a classificação como plataforma em linha de muito grande dimensão depender de uma decisão da Comissão Europeia, parece adequado o prazo de quatro meses para o fornecedor assegurar o cumprimento das obrigações previstas na presente secção.
 
@@ -105,7 +104,7 @@ Artigo 30.º \\
 A Proposta, no seu artigo 22.º, previa um regime de rastreabilidade dos comerciantes, o qual parece ter surgigo como resposta à crítica ao modo como foi aplicado o artigo 5.º da DCE[fn:16]. No decurso do processo legislativo, o artigo 22.º da Proposta foi objeto de alterações, destacando-se o aditamento de uma disposição transitória (n.º 2, 2.º parágrafo), o ajustamento do dever de verificar as informações recebidas a cargo do fornecedor, precisando que este não é responsável pela exatidão das informações (n.º 2, 1.º parágrafo), o alargamento do prazo de conservação dos dados (n.º 5) e o desenvolvimento do número relativo à conceção e organização da plataforma em linha e a sua autonomização naquele que é atualmente o artigo 31.º do RSD.
 
 *** II - Teleologia da norma
-O objetivo desta norma é "(...) contribuir para um ambiente em linha seguro, fiável e transparente para os consumidores, bem como para outras partes interessadas, como comerciantes concorrentes e titulares de direitos de propriedade intelectual (...)"[fn:17]. A norma opera com base no princípio /Know Your Business Customer/[cite:Cf., neste sentido, @wilman2024 30.º, n.º 2; @hofmann2023 30.º, n.º 1; @muller-terpitz2023 30.º, n.º 2]. Os fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes devem recolher e disponibilizar informação sobre os comerciantes, antes de os autorizarem a dirigirem, através da plataforma em linha, a sua atividade aos consumidores localizados na União Europeia. A informação recolhida permitirá rastrear os comerciantes, promovendo a transparência e melhorando a proteção dos consumidores e de outras partes interessadas. Espera-se também que dissuada os comerciantes de venderem produtos ou serviços em violação das regras aplicáveis[fn:18].
+O objetivo desta norma é "(...) contribuir para um ambiente em linha seguro, fiável e transparente para os consumidores, bem como para outras partes interessadas, como comerciantes concorrentes e titulares de direitos de propriedade intelectual (...)"[fn:17]. A norma opera com base no princípio /Know Your Business Customer/[cite:Cf., neste sentido, @wilman2024 30.º, n.º 2; @hofmann2023 30.º, n.º 1;@muller-terpitz2023 30.º, n.º 2;@leitao2023 p. 76]. Os fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes devem recolher e disponibilizar informação sobre os comerciantes, antes de os autorizarem a dirigirem, através da plataforma em linha, a sua atividade aos consumidores localizados na União Europeia. A informação recolhida permitirá rastrear os comerciantes, promovendo a transparência e melhorando a proteção dos consumidores e de outras partes interessadas. Espera-se também que dissuada os comerciantes de venderem produtos ou serviços em violação das regras aplicáveis[fn:18].
 
 *** III - Âmbito de aplicação
 *1. Âmbito de aplicação subjetivo*. O artigo 30.º é aplicável aos fornecedores de plataformas em linha que permitem aos consumidores celebrar contratos à distância com comerciantes que não beneficiem da isenção prevista no artigo 29.º. Na concretização dos destinatários da norma são relevantes os conceitos de "consumidor", "comerciante", "plataforma em linha", e "contrato à distância" definidos no artigo 3.º, e para o qual se remete. O conceito de "plataformas em linha que permitem aos consumidores celebrar contratos à distância" é muito próximo do conceito de "mercado em linha"[fn:19], mas não inclui as plataformas que apenas permitem a celebração de contratos entre consumidores[cite:@wilman2024 p. 224, n.º 8; @hofmann2023 30.º, n.º 8]. Assinala-se que apesar de o conceito de "comerciante" se encontrar definido no artigo 3.º, o considerando n.º 72 indica que "(...) qualquer comerciante, independentemente de ser uma pessoa singular ou coletiva, identificado como tal com base no artigo 6.º-A, n.º 1, alínea /b)/, da Diretiva 2011/83/UE e no artigo 7.º, n.º 4, alínea /f)/, da Diretiva 2005/29/CE, deverá ser rastreável quando oferece um produto ou serviço através de uma plataforma em linha."
@@ -156,7 +155,7 @@ O fornecedor não é obrigado a verificar a exatidão das informações recebida
 
 *** VIII - Direito de apresentar uma reclamação (n.º 4)
 
-Nos casos em que um fornecedor de uma plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes se recuse a autorizar um comerciante a utilizar o seu serviço ao abrigo do n.º 1 ou suspenda a utilização do seu serviço ao abrigo do n.º 3, o comerciante tem o direito de apresentar uma reclamação nos termos dos artigos 20.º e 21.º do presente regulamento, em acréscimo ao direito previsto no artigo 4.º, n.º 3, do Regulamento P2B[fn:32].
+Nos casos em que um fornecedor de uma plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes se recuse a autorizar um comerciante a utilizar o seu serviço ao abrigo do n.º 1 ou suspenda a utilização do seu serviço ao abrigo do n.º 3, o comerciante tem o direito de apresentar uma reclamação nos termos dos artigos 20.º e 21.º do RSD, em acréscimo ao direito previsto no artigo 4.º, n.º 3, do Regulamento P2B[fn:32].
 
 *** IX - Conservação dos dados (n.º 5)
 O fornecedor de plataforma em linha que permite aos consumidores celebrar contratos à distância com comerciantes está obrigado a armazenar as informações que obtenha ao abrigo dos n.ºs 1 e 2 de forma segura até que decorram 6 meses contados do termo da relação contratual com o comerciante. A Proposta previa a conservação apenas até ao termo da relação contratual[fn:34]. O alargamento do prazo de conservação constitui um reforço da proteção dos consumidores e pode ser necessário no contexto do art. 32.º[cite:@hofmann2023 30.º, n.º 48]. Durante esse período os dados devem conservados de forma segura, isto é utilizando meios tecnológicos adequados para garantir a segurança dos dados recebidos, atendendo também à natureza destes[cite:@muller-terpitz2023 30.º, n.º 38]. Findo o prazo de conservação, o fornecedor deve apagar os dados, salvo se estiver sujeito a outras eventuais "obrigações de conservar determinados conteúdos durante períodosde tempo mais longos previstas no direito da União ou direito nacional que seja conforme com direito da União"[fn:35].
@@ -248,7 +247,7 @@ Ao contrário do que sucede no artigo 30.º, n.º 2, não foi estabelecida aqui 
 
 O objeto desta verificação é determinar se algum ou alguns dos produtos ou serviços oferecidos na plataforma foram identificados como ilegais em qualquer base de dados em linha ou interface em linha oficial, de acesso livre e legível por máquina, disponíveis num Estado-Membro ou na União.
 
-Os conceitos de "produto ilegal" e "serviço ilegal" não são definidos no RSD. O RSD define o conceito de "conteúdos ilegais" no artigo 3.º, alínea /h)/, para cuja anotação se remete. Traçando um paralelo com o conceito de conteúdos ilegais, dir-se-á que produtos ou serviços ilegais são os que não estejam em conformidade com o direito da União ou com o direito de qualquer um dos Estados-Membros que seja conforme com o direito da União, independentemente do objeto ou da natureza precisa desse direito[cite:Cf., neste sentido, @muller-terpitz2023 31.º, n.º 20].
+Os conceitos de "produto ilegal" e "serviço ilegal" não são definidos no RSD. O RSD define o conceito de "conteúdos ilegais" no artigo 3.º, alínea /h)/, para cuja anotação se remete. Traçando um paralelo com o conceito de conteúdos ilegais, dir-se-á que produtos ou serviços ilegais são os que não estejam em conformidade com o direito da União ou com o direito de qualquer um dos Estados-Membros que seja conforme com o direito da União, independentemente do objeto ou da natureza precisa desse direito[cite:Cf., neste sentido, @muller-terpitz2023 31.º, n.º 20;@hofmann2023 32.º, n.º 18].
 
 O critério de diligência é o de "esforços razoáveis". Trata-se de um crivo menos exigente do que os "melhores esforços" consagrado no 1.º período deste n.º 3 e no artigo 30.º, n.º 2. O RSD não dá orientações sobre o modo de concretização deste critério de diligência.
 
@@ -276,6 +275,11 @@ Artigo 32.º \\
 
 ** Bibliografia :ignore:
 ** Comentário
+*** I - Antecedentes legislativos
+*** II - Teleologia da norma
+*** III - Âmbito de aplicação
+*** IV - Obrigação de informar os consumidores que adquiriram o produto ou serviço ilegal (n.º 1)
+*** V - Obrigação de divulgação (n.º 2)
 
 * Footnotes
 [fn:45] Cf. artigo 8.º do RSD e considerando n.º 74.
@@ -338,7 +342,7 @@ mercado único digital, COM(2021) 288 final, 4.6.2021, pp. 9 e ss.
 [fn:17] Considerando n.º 72.
 
 [fn:16] Cf. Parecer da Comissão da Cultura e da Educação, ponto 7, constante do Relatório que contém recomendações à Comissão sobre o Ato legislativo sobre os
-serviços digitais: Melhorar o funcionamento do mercado único (2020/2018(INL)), de 7.10.2020 e [cite:@hofmann2023 art. 30.º, n.º 7]
+serviços digitais: Melhorar o funcionamento do mercado único (2020/2018(INL)), de 7.10.2020 e [cite:@hofmann2023 art. 30.º, n.º 7;@leitao2023 p. 76]
 
 [fn:15] Cf. artigo 4.º, n.º 2, do Anexo da Recomendação 2003/361/CE.
 
